--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title></title>
+	<title>particles</title>
 	<meta charset="utf-8" />
 	<script src="optionsMenu.js" defer></script>
 	<link rel="stylesheet" href="optionsMenu.css">
